[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Mechanic.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Mechanic/Mechanik.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Mechanic/Mechanic_NoWeapon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/EnemyHealthUnder.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/EnemyHealth.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Shadow.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=8]

resource_name = "Dead"
length = 22.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 18, 19, 20, 21 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 11, 12, 11, 12, 30, 18, 19, 20, 21, 27, 27, 28, 29 ]
}

[sub_resource type="Animation" id=5]

resource_name = "Down"
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=6]

resource_name = "Idle"
length = 3.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=9]

resource_name = "ShieldBlock"
length = 9.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 31, 32, 32, 32, 33, 34, 31, 35 ]
}

[sub_resource type="Animation" id=7]

resource_name = "Tired"
length = 26.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 10, 9 ]
}

[node name="Mechanic" type="KinematicBody2D" index="0" groups=[
"enemies",
]]

scale = Vector2( 1.5, 1.5 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Sprites" type="Node2D" parent="." index="0"]

[node name="1" type="Sprite" parent="Sprites" index="0"]

visible = false
position = Vector2( 0.35849, -10.0376 )
texture = ExtResource( 2 )
vframes = 2
hframes = 3
_sections_unfolded = [ "Animation" ]

[node name="2" type="Sprite" parent="Sprites" index="1"]

texture = ExtResource( 3 )
vframes = 4
hframes = 9
frame = 31
_sections_unfolded = [ "Animation" ]

[node name="3" type="Sprite" parent="Sprites" index="2"]

visible = false

[node name="Shape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -73.0
margin_top = -114.0
margin_right = 85.0
margin_bottom = -76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = null
texture_progress = ExtResource( 5 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]

[node name="Radar" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="Radar" index="0"]

shape = SubResource( 2 )

[node name="DamageCollider" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="DamageCollider" index="0"]

shape = SubResource( 3 )

[node name="AttackCollider" type="Area2D" parent="." index="5"]

position = Vector2( 2.39491, -5.37387 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="AttackCollider" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="." index="6"]

position = Vector2( 0.583984, 31.2428 )
z_index = -1
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = "Dead"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 8.0
anims/Dead = SubResource( 8 )
anims/Down = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/ShieldBlock = SubResource( 9 )
anims/Tired = SubResource( 7 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="body_entered" from="Radar" to="." method="_on_Radar_body_entered"]

[connection signal="area_entered" from="AttackCollider" to="." method="_on_attack_hit"]


